--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,6 +5,9 @@ sonar.organization=ed-codepower
 sonar.projectName=TourOfHeroes
 sonar.projectVersion=1.0
 
+# Coverage Reprt Path
+sonar.javascript.lcov.reportPaths=./My-2-Cents-UI/coverage/my-2-cents-ui/lcov.info
+
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 sonar.sources=./angular-tour-of-heroes
 
