--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -10,6 +10,8 @@ sonar.javascript.lcov.reportPaths=./angular-tour-of-heroes/coverage/angular-tour
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 sonar.sources=./angular-tour-of-heroes
+sonar.tests=src
+sonar.exclusions=**/*.spec.ts,**/*test.ts,**/*.js
 
 # Encoding of the source code. Default is default system encoding
 sonar.sourceEncoding=UTF-8
