--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -10,7 +10,7 @@ sonar.javascript.lcov.reportPaths=./angular-tour-of-heroes/coverage/angular-tour
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 sonar.sources=./angular-tour-of-heroes
-sonar.tests=./angular-tour-of-heroes
+#sonar.tests=./angular-tour-of-heroes
 sonar.exclusions=**/*.spec.ts,**/*test.ts,**/*.js
 
 # Encoding of the source code. Default is default system encoding
