--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -11,7 +11,7 @@ sonar.javascript.lcov.reportPaths=./angular-tour-of-heroes/coverage/angular-tour
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 sonar.sources=./angular-tour-of-heroes
 #sonar.tests=./angular-tour-of-heroes
-sonar.exclusions=**/*.spec.ts,**/*test.ts,**/*.js
+sonar.exclusions=**/*.spec.ts,**/*test.ts,**/*.js,**/main.ts,**/environment.ts,**/environment.prod.ts
 
 # Encoding of the source code. Default is default system encoding
 sonar.sourceEncoding=UTF-8
